[package]
name = "Computress"
version = "0.1.0"
authors = ["OpenFusion Contributors"]
edition = "2021"

[dependencies]
dotenv = "0.15.0"
env_logger = "0.11.6"
ffmonitor = { git = "https://github.com/OpenFusionProject/ffmonitor", tag = "v1.1.1" }
poise = "0.6.1"
serde = "1.0.217"
serde_json = "1.0.134"
tokio = { version = "1.42.0", features = ["full"] }
