[package]
name = "computress-rs"
version = "1.5.0"
authors = ["OpenFusion Contributors"]
edition = "2021"

[[bin]]
path = "src/main.rs"
name = "computress"

[dependencies]
dotenv = "0.15.0"
env_logger = "0.11.6"
ffmonitor = { git = "https://github.com/OpenFusionProject/ffmonitor", tag = "v2.0.0" }
poise = "0.6.1"
regex = "1.11.1"
reqwest = { version = "0.12.12", features = ["json"] }
serde = "1.0.217"
serde_json = "1.0.134"
tokio = { version = "1.42.0", features = ["full"] }
